# historico-congreso-union

./: .gitignore  LICENSE  README.md  pyproject.toml  reporte_sitl_lxvi_url.md
f1/config/: xp_config.toml
f1/packets/: XP_DIP_GACETA_LXVI_20251210.json  XP_DIP_GACETA_TABLA_LXVI_20251210.json  XP_DIP_SITL_LXVI_AGREGADO.json  XP_DIP_SITL_LXVI_DETALLE.json  XP_DIP_SITL_LXVI_DIVIDIDA.json  XP_DIP_SITL_LXVI_UNANIME.json  XP_SEN_HIST_LXIV_INDEX.json  XP_SEN_LXVI_AJAX_5001.json  XP_SEN_LXVI_INDEX.json  XP_SEN_LXVI_VOT_5001.json  generate_packets.py
f1/parsers/: xp_diputados_gaceta.py  xp_diputados_sitl.py  xp_senado_historico.py  xp_senado_lxvi.py  xp_types.py  xp_utils.py
f1/runners/: run_p0.py
f2/: db_init.py  ingest_f1.py  models.py  schema.sql
notebooks/: qa_inspection.py
scraper/: __init__.py  _builtin_sources.py  _types.py  cli.py  config.toml  dry_run.py  engine.py  persistence.py  person_normalizer.py  pipeline.py  senado_client.py  source_registry.py
scraper/exporter/: __init__.py  artifacts.py  mapping.py  raw_db.py  snapshot.py
scraper/sources/: __init__.py  gaceta.py  gaceta_lxvi.py  senado.py  senado_historico.py  (+3 more)
scripts/: backfill_dates.py  backfill_vote_counts_total.py  build_person_catalog.py  check_fk.py  debug_sitl.py
shared/: persistence_core.py  transform_bridge.py
tests/: test_engine.py  test_exporter.py  test_parser.py  test_persistence.py  test_person_integration.py  test_person_matching.py  test_person_normalizer.py  test_pipeline.py  test_senado_client.py  test_sitl_lxvi_source.py  test_source_registry.py  test_transform_bridge.py
(+1 files in other folders)
