[project]
name = "historico-congreso-union"
version = "0.1.0"
description = "Parser transductor temporal para fuentes del Congreso de la Unión"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "polars>=1.0",
]

[project.optional-dependencies]
senado = ["curl_cffi>=0.7"]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "marimo>=0.23.2",
]
